--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/faviconi.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Oleg Rõbnikov Web Development</title>
     <meta
